# bazel-cpp-grpc-server

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  main.cc
include/calculator/: BUILD.bazel  calculator.cc  calculator.h  calculator_test.cc  calculator_unittest.cc
include/math/: BUILD.bazel  math_test.cc
include/server/math/: BUILD.bazel  math.cc  math.h  math_unittest.cc
proto/math/v1/: BUILD.bazel  math.grpc.pb.cc  math.grpc.pb.h  math.pb.cc  math.pb.h  math.proto
