cc_library(
    name = "calculator",
    srcs = [
        "calculator.cc",
        "calculator.h",
    ],
    hdrs = [
        "calculator.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "calculator_test",
    size = "small",
    srcs = [
        "calculator_test.cc",
    ],
    deps = [
        ":calculator",
        "@com_google_googletest//:gtest_main",
    ],
)
