cc_library(
    name = "calculator",
    srcs = [
        "calculator.cc",
        "calculator.h",
    ],
    hdrs = [
        "calculator.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "calculator_test",
    srcs = [
        "calculator_unittest.cc",
    ],
    deps = [
        ":calculator",
        "@com_google_googletest//:gtest_main",
    ],
)
