cc_library(
    name = "math",
    srcs = [
        "math.cc",
        "math.h",
    ],
    hdrs = [
        "math.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//include/calculator",
        "//proto/math/v1:math",
        "//proto/math/v1:math_v1_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_test(
    name = "math_test",
    srcs = [
        "math_unittest.cc",
    ],
    deps = [
        ":math",
        "//include/calculator",
        "@com_google_googletest//:gtest_main",
    ],
)
