load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")

proto_library(
    name = "math_v1_proto",
    srcs = ["math.proto"],
)

cc_proto_library(
    name = "math_v1_cc_proto",
    deps = [
        ":math_v1_proto",
    ],
)

cc_grpc_library(
    name = "math_v1_cc_grpc",
    srcs = [":math_v1_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":math_v1_cc_proto"],
)

cc_library(
    name = "math",
    visibility = ["//visibility:public"],
    deps = [
        ":math_v1_cc_proto",
    ],
)
